operational through MD

--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,7 @@
-path: ''
+path: '/Users/colb804/workspace/data/benchmark_set/'
 
 adducts: ['+Na', '+H', '-H']
+charges: {'+Na': 1, '+H', 1, '-H': -1, 'Ne': 0}
 
 forcefield:
   type: 'gaff'
