--- a/isicle/resources/amber/tleap.template
+++ b/isicle/resources/amber/tleap.template
@@ -1,6 +1,8 @@
 logFile ${log}
 source leaprc.gaff
+logFile ${log}
 source oldff/leaprc.ff14SB
+logFile ${log}
 loadAmberParams ${frcmod}
 loadAmberParams frcmod.ionsjc_spce
 TP = loadMol2 ${mol2}
