--- a/resources/example_config.yaml
+++ b/resources/example_config.yaml
@@ -24,10 +24,10 @@ amber:
   high: 1.45e+06
 
 nwchem:
-  dft_template: isicle/resources/nwchem/dft.template
-  shielding_template: isicle/resources/nwchem/shielding.template
+  dft_template: default
+  shielding_template: default
 
 mobcal:
-  params: isicle/resources/mobcal/mobcal.params
-  atomtypes: isicle/resources/mobcal/atomtype_parameters.in
-  exe: isicle/resources/mobcal/mobcal_cascade
+  params: default
+  atomtypes: default
+  exe: mobcal_cascade
