adds field for chem shift reference compound

--- a/resources/example_config.yaml
+++ b/resources/example_config.yaml
@@ -27,6 +27,7 @@ nwchem:
   dft_template: default
   shielding_template: default
   shifts: ['H', 'C']
+  reference: ''
 
 mobcal:
   params: default
