adds reference compound

--- a/resources/example_config.yaml
+++ b/resources/example_config.yaml
@@ -27,7 +27,7 @@ nwchem:
   dft_template: default
   shielding_template: default
   shifts: ['H', 'C']
-  reference: ''
+  reference: 'TMS'
 
 mobcal:
   params: default
