adds calibration rule and supporting code

--- a/resources/example_config.yaml
+++ b/resources/example_config.yaml
@@ -16,6 +16,10 @@ impact:
 ccs:
   alpha: 27.9
   beta: 0.14
+  correcton: {'+Na': {'m': 0.8282445757267285, 'b': 27.84924995258012},
+              '+H':  {'m': 0.8419640859610955, 'b': 35.15260461418354},
+              '-H':  {'m': 0.8659194583284285, 'b': 19.49230686446195},
+              'Ne':  {'m': 1.0, 'b': 1.0}}
 
 amber:
   cycles: 10
