--- a/resources/example_config.yaml
+++ b/resources/example_config.yaml
@@ -1,7 +1,7 @@
 path: ''
 
-adducts: ['+Na', '+H', '-H', 'Ne']
-charges: {'+Na': 1, '+H': 1, '-H': -1, 'Ne': 0}
+adducts: ['+Na', '+H', '-H', 'neutral']
+charges: {'+Na': 1, '+H': 1, '-H': -1, 'neutral': 0}
 
 forcefield:
   type: 'gaff'
@@ -19,7 +19,7 @@ ccs:
   calibration: {'+Na': {'m': 0.8282445757267285, 'b': 27.84924995258012},
                 '+H':  {'m': 0.8419640859610955, 'b': 35.15260461418354},
                 '-H':  {'m': 0.8659194583284285, 'b': 19.49230686446195},
-                'Ne':  {'m': 1.0, 'b': 1.0}}
+                'neutral':  {'m': 1.0, 'b': 1.0}}
 
 amber:
   cycles: 10
