--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,5 @@
-snakemake
-openbabel
-pybel
-numpy
-pandas
-argparse
-yaml
-pathlib
-chembl_ikey
-statsmodels
+wheel>=0.36.2
+setuptools>=49.6.0;python_version>='3'
+numpy>=1.19.4
+pandas>=1.1.4
+statsmodels>=0.12.1
