--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-wheel>=0.36.2
-setuptools>=49.6.0;python_version>='3'
-numpy>=1.19.4
-pandas>=1.1.4
-statsmodels>=0.12.1
+numpy>=1.20.2
+pandas>=1.2.4
+rdkit>=2021.03.1
+snakemake>=6.3.0
+statsmodels>=0.12.2
