Replace rdkit-pypi with rdkit

--- a/setup.cfg
+++ b/setup.cfg
@@ -20,7 +20,7 @@ install_requires =
     numpy>=1.19.4
     openbabel>=3.0.0
     pandas>=1.1.4
-    rdkit-pypi
+    rdkit
     snakemake>=6.3.0
     statsmodels>=0.11.1
 python_requires = >=3.7,<3.10
