--- a/conda.recipe/meta.yaml
+++ b/conda.recipe/meta.yaml
@@ -19,19 +19,19 @@ build:
 
 requirements:
   host:
-    - python >=3.7,<3.10
     - pip
+    - python >=3.7,<3.10
   run:
+    - crest >=2.12
     - numpy >=1.19.4
+    - nwchem >=7.0.2
     - openbabel >=3.0.0
     - pandas >=1.1.4
     - python >=3.7,<3.10
     - rdkit >=2019
     - snakemake >=6.3.0
     - statsmodels >=0.11.1
-    - xtb
-    - crest
-    - nwchem
+    - xtb >=6.5.1
 
 test:
   imports:
