Clean up install files

--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -12,6 +12,7 @@ extra:
   channels:
     - conda-forge
     - bioconda
+    - smcolby
 
 build:
   number: 0
@@ -20,14 +21,15 @@ build:
 requirements:
   host:
     - pip
-    - python >=3.7,<3.10
+    - python
   run:
     - crest >=2.12
+    - mobcal-shm
     - numpy >=1.19.4
     - nwchem >=7.0.2
     - openbabel >=3.0.0
     - pandas >=1.1.4
-    - python >=3.7,<3.10
+    - python =3.9
     - rdkit >=2019
     - snakemake >=6.3.0
     - statsmodels >=0.11.1
