--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -28,6 +28,7 @@ requirements:
     - numpy >=1.19.4
     - nwchem >=7.0.2
     - openbabel >=3.0.0
+    - openmpi
     - pandas >=1.1.4
     - python =3.9
     - rdkit >=2019
