--- a/environment.yml
+++ b/environment.yml
@@ -3,13 +3,13 @@ channels:
   - conda-forge
   - bioconda
   - smcolby
-  - defaults
 dependencies:
   - crest >=2.12
   - mobcal-shm
   - numpy >=1.19.4
   - nwchem >=7.0.2
   - openbabel >=3.0.0
+  - openmpi
   - pandas >=1.1.4
   - python =3.9
   - rdkit >=2019
