--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -12,7 +12,7 @@ extra:
   channels:
     - conda-forge
     - bioconda
-    - smcolby
+    - smcolby # [linux64]
     - anaconda
 
 build:
@@ -26,7 +26,7 @@ requirements:
   run:
     - crest >=2.12
     - joblib
-    - mobcal-shm
+    - mobcal-shm # [linux64]
     - numpy >=1.19.4
     - nwchem >=7.0.2
     - openbabel >=3.0.0
