--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -33,7 +33,7 @@ requirements:
     - openmpi
     - pandas >=1.1.4
     - python =3.9
-    - rdkit >=2019
+    - rdkit <=2022.09.1
     - snakemake >=6.3.0
     - statsmodels >=0.11.1
     - xtb >=6.5.1
