--- a/docs/source/requirements.txt
+++ b/docs/source/requirements.txt
@@ -1,11 +1,11 @@
-sphinx >=3
+sphinx >= 3
 sphinxcontrib-napoleon
 sphinx_rtd_theme
 ipython
 joblib
-numpy>=1.19.4
-openbabel>=3.0.0
-pandas>=1.1.4
-rdkit<=2022.09.1
-snakemake>=6.3.0
-statsmodels>=0.12.1
+numpy >= 1.19.4
+openbabel == 3.1.1
+pandas >= 1.1.4
+rdkit <= 2022.09.1
+snakemake >= 6.3.0
+statsmodels >= 0.12.1
