--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 joblib
 numpy >= 1.19.4
-openbabel @ git+https://github.com/openbabel/openbabel@openbabel-3-1-1
+# openbabel
 pandas >= 1.1.4
 # rdkit <= 2022.09.1
 snakemake >= 6.3.0
