--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -3,7 +3,10 @@ version: 2
 sphinx:
   configuration: docs/source/conf.py
 
-python:
-  version: 3.8
-  install:
-    - requirements: docs/source/requirements.txt
+build:
+  os: "ubuntu-20.04"
+  tools:
+    python: "mambaforge-4.10"
+
+conda:
+  environment: docs/source/environment.yml
