--- a/workflows/shielding/nextflow-slurm/nextflow.config
+++ b/workflows/shielding/nextflow-slurm/nextflow.config
@@ -4,7 +4,7 @@ conda {
 }
 
 process {
-    conda = "/people/jyst649/.conda/envs/isicle"
+    conda = "/people/$USER/.conda/envs/isicle"
 }
 
 account = 'NPMRD'
@@ -36,35 +36,35 @@ process {
     executor = 'slurm'
     queue = 'slurm'
     time = '1:00:00'
-    clusterOptions = '-A NPMRD --job-name default -N 1 -n 5'
+    clusterOptions = '--job-name default -N 1 -n 5'
 
     withLabel: adducts {
         // Define resource requirements for process `adduct`
         errorStrategy = 'ignore'
-        queue = 'shared,slurm,short'
+        queue = 'slurm'
         time = "${a_time}"
-        clusterOptions = "-A NPMRD --job-name ${a_name} -N ${a_nodes} -n ${a_ntasks_per_node}"
+        clusterOptions = "--job-name ${a_name} -N ${a_nodes} -n ${a_ntasks_per_node}"
     }
     withLabel: conformers {
         // Define resource requirements for process `conformer`
         errorStrategy = 'ignore'
-        queue = 'shared,slurm'
+        queue = 'slurm'
         time = "${c_time}"
-        clusterOptions = "-A ${account} --job-name ${c_name} -N ${c_nodes} -n ${c_ntasks_per_node}"
+        clusterOptions = "--job-name ${c_name} -N ${c_nodes} -n ${c_ntasks_per_node}"
     }
     withLabel: dft {
         // Define resource requirements for process `dft`
         errorStrategy = 'ignore'
-        queue = 'shared,slurm'
+        queue = 'slurm'
         time = "${dft_time}"
-        clusterOptions = "-A ${account} --job-name ${dft_name} -N ${dft_nodes} -n ${dft_ntasks_per_node}"
+        clusterOptions = "--job-name ${dft_name} -N ${dft_nodes} -n ${dft_ntasks_per_node}"
     }
     withLabel: mobility {
         // Define resource requirements for process `mobility`
         errorStrategy = 'ignore'
         queue = 'slurm'
         time = "${mobility_time}"
-        clusterOptions = "-A ${account} --job-name ${mobility_name} -N ${mobility_nodes} -n ${mobility_ntasks_per_node}"
+        clusterOptions = "--job-name ${mobility_name} -N ${mobility_nodes} -n ${mobility_ntasks_per_node}"
     }
 }
 
