--- a/envs/linux.yml
+++ b/envs/linux.yml
@@ -13,8 +13,8 @@ dependencies:
   - openbabel >=3.0.0
   - openmpi
   - pandas >=1.1.4
-  - python =3.9
-  - rdkit <=2022.09.1
+  - python >=3.9
+  - rdkit
   - snakemake >=6.3.0
   - statsmodels >=0.11.1
   - xtb >=6.5.1
