--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,6 @@ joblib
 numpy >= 1.19.4
 # openbabel
 pandas >= 1.1.4
-# rdkit <= 2022.09.1
+rdkit >= 2023.09.1
 snakemake >= 6.3.0
 statsmodels >= 0.11.1
