Rollback python versioning to master, 3.9

--- a/envs/linux.yml
+++ b/envs/linux.yml
@@ -13,7 +13,7 @@ dependencies:
   - openbabel >=3.0.0
   - openmpi
   - pandas >=1.1.4
-  - python >=3.9
+  - python =3.9
   - rdkit >=2023.09.1
   - snakemake >=6.3.0
   - statsmodels >=0.11.1
