Specific miniforge version (test)

--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -35,6 +35,7 @@ jobs:
         uses: conda-incubator/setup-miniconda@v3
         with:
           miniforge-variant: Mambaforge
+          miniforge-version: 4.9.2-4
           use-mamba: true
           environment-file: envs/linux.yml
           use-only-tar-bz2: true
@@ -64,6 +65,7 @@ jobs:
         uses: conda-incubator/setup-miniconda@v3
         with:
           miniforge-variant: Mambaforge
+          miniforge-version: 4.9.2-4
           use-mamba: true
           environment-file: envs/osx.yml
           use-only-tar-bz2: true
@@ -95,6 +97,7 @@ jobs:
         uses: conda-incubator/setup-miniconda@v3
         with:
           miniforge-variant: Mambaforge
+          miniforge-version: 4.9.2-4
           use-mamba: true
           python-version: 3.9
           channels: conda-forge,bioconda
