--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -38,7 +38,7 @@ requirements:
     - statsmodels >=0.11.1
     - xtb >=6.5.1
     - pip:
-      - git+https://github.com/Goodman-lab/CONFPASS.git
+      - git+https://github.com/jessbade/CONFPASS.git
 
 test:
   imports:
