--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -37,6 +37,9 @@ requirements:
     - snakemake >=6.3.0
     - statsmodels >=0.11.1
     - xtb >=6.5.1
+    - scikit-learn
+    - natsort
+    - networkx
     - pip:
       - git+https://github.com/jessbade/CONFPASS.git
 
