--- a/envs/linux.yml
+++ b/envs/linux.yml
@@ -18,5 +18,8 @@ dependencies:
   - snakemake >=6.3.0
   - statsmodels >=0.11.1
   - xtb >=6.5.1
+  - scikit-learn
+  - natsort
+  - networkx
   - pip:
     - git+https://github.com/jessbade/CONFPASS.git
