--- a/envs/osx.yml
+++ b/envs/osx.yml
@@ -16,5 +16,8 @@ dependencies:
   - snakemake >=6.3.0
   - statsmodels >=0.11.1
   - xtb >=6.5.1
+  - scikit-learn
+  - natsort
+  - networkx
   - pip:
     - git+https://github.com/jessbade/CONFPASS.git
