--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,6 @@ pandas >= 1.1.4
 snakemake >= 6.3.0
 statsmodels >= 0.11.1
 git+https://github.com/jessbade/CONFPASS.git
+scikit-learn
+natsort
+networkx
