--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ pandas >= 1.1.4
 # rdkit >= 2023.09.1
 snakemake >= 6.3.0
 statsmodels >= 0.11.1
-git+https://github.com/jessbade/CONFPASS.git
+confpass @ git+https://github.com/jessbade/CONFPASS@main
 scikit-learn
 natsort
 networkx
