--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -32,7 +32,7 @@ requirements:
     - openbabel >=3.0.0
     - openmpi
     - pandas >=1.1.4
-    - python =3.9
+    - python >=3.9
     - rdkit >=2023.09.1
     - snakemake >=6.3.0
     - statsmodels >=0.11.1
