--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -35,7 +35,7 @@ jobs:
         uses: conda-incubator/setup-miniconda@v3
         with:
           miniforge-variant: Mambaforge
-          miniforge-version: 4.9.2-4
+          miniforge-version: latest
           use-mamba: true
           environment-file: envs/linux.yml
           use-only-tar-bz2: true
@@ -65,7 +65,7 @@ jobs:
         uses: conda-incubator/setup-miniconda@v3
         with:
           miniforge-variant: Mambaforge
-          miniforge-version: 4.9.2-4
+          miniforge-version: latest
           use-mamba: true
           environment-file: envs/osx.yml
           use-only-tar-bz2: true
@@ -97,9 +97,9 @@ jobs:
         uses: conda-incubator/setup-miniconda@v3
         with:
           miniforge-variant: Mambaforge
-          miniforge-version: 4.9.2-4
+          miniforge-version: latest
           use-mamba: true
-          python-version: 3.9
+          python-version: 3.12
           channels: conda-forge,bioconda
           use-only-tar-bz2: true
           auto-activate-base: true
