--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -38,7 +38,7 @@ jobs:
           miniforge-version: latest
           use-mamba: true
           environment-file: envs/linux.yml
-          use-only-tar-bz2: true
+          use-only-tar-bz2: false
           auto-activate-base: false
           activate-environment: isicle
       
@@ -68,7 +68,7 @@ jobs:
           miniforge-version: latest
           use-mamba: true
           environment-file: envs/osx.yml
-          use-only-tar-bz2: true
+          use-only-tar-bz2: false
           auto-activate-base: false
           activate-environment: isicle
       
@@ -101,7 +101,7 @@ jobs:
           use-mamba: true
           python-version: 3.12
           channels: conda-forge,bioconda
-          use-only-tar-bz2: true
+          use-only-tar-bz2: false
           auto-activate-base: true
 
       - name: Install dependencies
