--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -1,9 +1,9 @@
-{% set data = load_setup_py_data(setup_file='../setup.py',
+{% set data = load_setup_py_data(setup_file="../setup.py",
                                  from_recipe_dir=True) %}
 
 package:
   name: isicle
-  version: {{ data.get('version') }}
+  version: {{ data.get("version") }}
 
 source:
   path: ..
