--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -111,7 +111,7 @@ jobs:
             --target-platform ${{ matrix.target-platform }}
             --recipe rattler-recipe/recipe.yaml
             --variant-config rattler-recipe/variants.yaml
-            --output-dir build
+            --output-dir build/
             -c conda-forge
             -c bioconda
       
@@ -119,7 +119,7 @@ jobs:
         env:
           ANACONDA_API_TOKEN: ${{ secrets.ANACONDA_TOKEN }}
         run: |
-          for pkg in $(find build -type f \( -name "*.conda" -o -name "*.tar.bz2" \) ); do
+          for pkg in $(find build/ -type f \( -name "*.conda" -o -name "*.tar.bz2" \) ); do
             echo "Uploading ${pkg}"
             rattler-build upload anaconda --owner smcolby "${pkg}"
           done
