--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -114,6 +114,7 @@ jobs:
             --output-dir build/
             -c conda-forge
             -c bioconda
+            -c smcolby
       
       - name: Upload conda package
         env:
